# Proyecto-Opt-Es

./: .gitignore  CMakeLists.txt  README.md  analysis.py  join_files.sh  tasks  write_tasks.sh
documents/: TODO.md
documents/Document/: main.bbl  main.blg  main.tex  references.bib
documents/Document/files/: package.tex
documents/Document/sections/: abstract.tex  body.tex  conclusions.tex  introduction.tex  results.tex  title.tex  title_data.tex
src/: TODO.md  geneticAlgorithm.cpp  localsearch.cpp  main.cpp  out.txt  randomTour.cpp  readFile.cpp  utils.cpp
src/headers/: common.h  functions.h  geneticAlgorithm.h  localsearch.h  randomTour.h  utils.h
